salvia_macro/tests/query_ui/fail/not_async.rs
#![allow(unused_imports)]

use salvia::{query, QueryContext};

#[query]
fn f(_cx: &QueryContext) -> i32 {
    todo!()
}

fn main() {}
