salvia_macro/tests/query_ui/fail/not_async.stderr
error: #[query]: can only be applied to async functions
 --> $DIR/not_async.rs:6:4
  |
6 | fn f(_cx: &QueryContext) -> i32 {
  |    ^
